syntax = "proto3";
package google.protobuf;

option csharp_namespace = "Communication.Proto";

message GameStatus {
    int32 status = 1;
    int32 clientCount = 2;
}
